namespace BattleScene.Domain.Id
{
    public class SequenceNumber : Number<SequenceNumber>
    {
        public SequenceNumber(int number) : base(number)
        {
        }
    }
}