namespace BattleScene.Domain.Id
{
    public class TurnNumber : Number<TurnNumber>
    {
        public TurnNumber(int number) : base(number)
        {
        }
    }
}