namespace BattleScene.Domain.Interface
{
    public interface IResult
    {
    }
}